[gd_scene load_steps=13 format=3 uid="uid://c65p31byu7drk"]

[ext_resource type="Script" path="res://Objects/pickable.gd" id="1_bsijb"]
[ext_resource type="PackedScene" uid="uid://b7fsctc3sgvtd" path="res://GUI/self_terminating_audio.tscn" id="2_ws2u1"]
[ext_resource type="AudioStream" uid="uid://bt0ftlh10ixng" path="res://sfx/Item_Pickup.mp3" id="3_tuepi"]

[sub_resource type="Gradient" id="Gradient_loua4"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.535714, 0.552198)
colors = PackedColorArray(1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r1vnj"]
gradient = SubResource("Gradient_loua4")
fill_from = Vector2(0.523504, 1)
fill_to = Vector2(0.532051, 0.0128205)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kh1ub"]
albedo_texture = SubResource("GradientTexture2D_r1vnj")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fvdx0"]
material = SubResource("StandardMaterial3D_kh1ub")

[sub_resource type="BoxShape3D" id="BoxShape3D_2q2wm"]

[sub_resource type="Animation" id="Animation_tmew0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tgghi"]
resource_name = "idle"
length = 3.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.298312, 0, 0), Vector3(-0.298451, 6.28319, 3.48787e-16)]
}

[sub_resource type="Animation" id="Animation_wbmyt"]
resource_name = "pickup"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5708, 0, 0), Vector3(-1.5708, 12.5664, 3.48787e-16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 1, 1), Vector3(0.1, 0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a32r1"]
_data = {
"RESET": SubResource("Animation_tmew0"),
"idle": SubResource("Animation_tgghi"),
"pickup": SubResource("Animation_wbmyt")
}

[node name="Pickable" type="Area3D"]
collision_layer = 32
script = ExtResource("1_bsijb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.263135, 0, 0, 0, 0.263135, 0, 0, 0, 0.263135, 0, 0.0983262, 0)
mesh = SubResource("CapsuleMesh_fvdx0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_2q2wm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_a32r1")
}

[node name="PickupNoise" parent="." instance=ExtResource("2_ws2u1")]
stream = ExtResource("3_tuepi")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
